--- a/.github/ISSUE_TEMPLATE/issue_form.yaml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yaml
@@ -1,36 +1,32 @@
-name: 🐞 Bug
-description: File a bug/issue
-title: "[BUG] <title>"
-labels: [Bug, Needs Triage]
+name: Bug report
+description: Something went wrong.
 body:
-- type: checkboxes
-  attributes:
-    label: Is there an existing issue for this?
-    description: Please search to see if an issue already exists for the bug you encountered.
-    options:
-    - label: I have searched the existing issues
-      required: true
 - type: textarea
   attributes:
-    label: Current Behavior
-    description: A concise description of what you're experiencing.
+    label: Description
+    description: A clear and concise description of what went wrong.
   validations:
-    required: false
+    required: true
 - type: textarea
   attributes:
-    label: Expected Behavior
-    description: A concise description of what you expected to happen.
-  validations:
-    required: false
-- type: textarea
-  attributes:
-    label: Steps To Reproduce
-    description: Steps to reproduce the behavior.
+    label: Steps to reproduce
     placeholder: |
-      1. In this environment...
-      2. With this config...
-      3. Run '...'
-      4. See error...
+      1. Go to '...'
+      2. Click on '...'
+      3. Scroll down to '...'
+      4. See '...'
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Expected results
+    description: What did you expect to happen?
+  validations:
+    required: false
+- type: textarea
+  attributes:
+    label: Actual results
+    description: What actually happened.
   validations:
     required: false
 - type: textarea
@@ -50,10 +46,10 @@ body:
     required: false
 - type: textarea
   attributes:
-    label: Anything else?
+    label: Additional context
     description: |
-      Links? References? Anything that will give us more context about the issue you are encountering!
+      Logs? Links? References? Screenshots? Videos? Anything that will help us to better understand the issue you are encountering!
 
-      Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      Tip: You can drag and drop to attach files.
   validations:
     required: false
