--- a/.github/ISSUE_TEMPLATE/issue_form.yaml
+++ b/.github/ISSUE_TEMPLATE/issue_form.yaml
@@ -6,13 +6,11 @@ body:
     label: What happened?
     description: A concise description of what went wrong.
   validations:
-    required: false
+    required: true
 - type: textarea
   attributes:
     label: What was expected?
     description: A concise description of what was expected to happen.
-  validations:
-    required: false
 - type: textarea
   attributes:
     label: Steps to reproduce
@@ -27,7 +25,7 @@ body:
   attributes:
     label: Additional context
     description: |
-      Links, screenshots, videos, or anything that may help us to understand and resolve the issue you are encountering.
+      Logs, links, screenshots, videos, or anything that may help us to resolve the issue.
     placeholder: |
       - /var/log/installer/ubuntu_desktop_installer.log
       - /var/log/installer/subiquity-server-debug.log
